--- a/TotalCommander/TotalCommander.csproj
+++ b/TotalCommander/TotalCommander.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TotalCommander</RootNamespace>
     <AssemblyName>TotalCommander</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -26,6 +26,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -83,6 +84,12 @@
     <Compile Include="GUI\FormFindFiles.Designer.cs">
       <DependentUpon>FormFindFiles.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\FormFontSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\FormFontSettings.Designer.cs">
+      <DependentUpon>FormFontSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\FormPacking.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\FormFindFiles.resx">
       <DependentUpon>FormFindFiles.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FormFontSettings.resx">
+      <DependentUpon>FormFontSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\FormPacking.resx">
       <DependentUpon>FormPacking.cs</DependentUpon>
