--- a/TotalCommander/TotalCommander.csproj
+++ b/TotalCommander/TotalCommander.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8B3B6A1D-2373-42BD-9216-5E6265E9BB83}</ProjectGuid>
+    <ProjectGuid>{8E13E5C5-2FAB-48B8-8037-E756F74276F0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TotalCommander</RootNamespace>
     <AssemblyName>TotalCommander</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -29,7 +30,7 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -39,7 +40,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -48,36 +49,31 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>false</SignManifests>
-  </PropertyGroup>
-  <PropertyGroup>
     <ApplicationIcon>totalCommander.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Management" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComboBoxItem.cs" />
-    <Compile Include="GUI\DisksBrowser.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="GUI\FileBrowser.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="GUI\DisksBrowser.cs" />
+    <Compile Include="GUI\FileBrowser.cs" />
     <Compile Include="GUI\FormFindFiles.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,23 +98,11 @@
     <Compile Include="GUI\FormNewFolder.Designer.cs">
       <DependentUpon>FormNewFolder.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\HtmlBrowser.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\HtmlBrowser.Designer.cs">
-      <DependentUpon>HtmlBrowser.cs</DependentUpon>
-    </Compile>
     <Compile Include="GUI\ListViewColumnSorter.cs" />
     <Compile Include="GUI\ListViewExtensions.cs" />
-    <Compile Include="GUI\NavigationPane.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="GUI\ShellBrowser.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="GUI\ShellBrowser.Designer.cs">
-      <DependentUpon>ShellBrowser.cs</DependentUpon>
-    </Compile>
+    <Compile Include="GUI\NavigationPane.cs" />
+    <Compile Include="GUI\ShellBrowser.cs" />
+    <Compile Include="GUI\ShellBrowser.Designer.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -126,7 +110,6 @@
     </Compile>
     <Compile Include="ShellContextMenu.cs" />
     <Compile Include="ShellIcon.cs" />
-    <Compile Include="PropertiesDialog.cs" />
     <Compile Include="Form_TotalCommander.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,11 +117,36 @@
       <DependentUpon>Form_TotalCommander.cs</DependentUpon>
     </Compile>
     <Compile Include="ShellHistory.cs" />
+    <Compile Include="KeySettings.cs" />
+    <Compile Include="ShellProperties.cs" />
+    <Compile Include="GUI\FormKeySettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\FormKeySettings.Designer.cs">
+      <DependentUpon>FormKeySettings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\FormManageUserOptions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\FormProgressCopy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\FormUserExecuteOption.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellInfoItem.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Form_TotalCommander.resx">
       <DependentUpon>Form_TotalCommander.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\FormFindFiles.resx">
       <DependentUpon>FormFindFiles.cs</DependentUpon>
@@ -152,95 +160,42 @@
     <EmbeddedResource Include="GUI\FormNewFolder.resx">
       <DependentUpon>FormNewFolder.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\HtmlBrowser.resx">
-      <DependentUpon>HtmlBrowser.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="GUI\ShellBrowser.resx">
       <DependentUpon>ShellBrowser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FormKeySettings.resx">
+      <DependentUpon>FormKeySettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FormManageUserOptions.resx">
+      <DependentUpon>FormManageUserOptions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FormProgressCopy.resx">
+      <DependentUpon>FormProgressCopy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FormUserExecuteOption.resx">
+      <DependentUpon>FormUserExecuteOption.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="app.manifest" />
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\ic_archive_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ic_arrow_upward_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ic_cancel_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ic_chevron_left_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ic_chevron_right_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ic_close_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ic_refresh_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ic_search_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ic_unarchive_black_48dp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon-view-pane.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Details-50.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon-view-pane1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Edit File-16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Copy-16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Rename-16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Up-16.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\refresh_icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\info_icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
       <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
+      <ProductName>Microsoft .NET Framework 4.7.2%28x86 및 x64%29</ProductName>
       <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
       <Visible>False</Visible>
@@ -249,25 +204,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\document_tree_icon.png" />
-    <None Include="Resources\Add_Folder.png" />
-    <None Include="Resources\Add_File1.png" />
-    <Content Include="7za.exe">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Keyboards.htm">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="Resources\Show_Password_24.png" />
     <Content Include="totalCommander.ico" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
