--- a/TotalCommander/TotalCommander.csproj
+++ b/TotalCommander/TotalCommander.csproj
@@ -117,7 +117,6 @@
       <DependentUpon>Form_TotalCommander.cs</DependentUpon>
     </Compile>
     <Compile Include="ShellHistory.cs" />
-    <Compile Include="KeySettings.cs" />
     <Compile Include="ShellProperties.cs" />
     <Compile Include="GUI\FormKeySettings.cs">
       <SubType>Form</SubType>
@@ -134,7 +133,6 @@
     <Compile Include="GUI\FormUserExecuteOption.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShellInfoItem.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -142,6 +140,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="KeySettings.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form_TotalCommander.resx">
