--- a/TotalCommander/TotalCommander.csproj
+++ b/TotalCommander/TotalCommander.csproj
@@ -98,6 +98,9 @@
     <Compile Include="GUI\FormNewFolder.Designer.cs">
       <DependentUpon>FormNewFolder.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\FormCopyConfirm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\ListViewColumnSorter.cs" />
     <Compile Include="GUI\ListViewExtensions.cs" />
     <Compile Include="GUI\NavigationPane.cs" />
@@ -160,6 +163,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\FormNewFolder.resx">
       <DependentUpon>FormNewFolder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FormCopyConfirm.resx">
+      <DependentUpon>FormCopyConfirm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ShellBrowser.resx">
       <DependentUpon>ShellBrowser.cs</DependentUpon>
