코드 개선 및 정리
리소스 정리
Resources.resx와 Resources.Designer.cs에서 사용하지 않는 리소스 제거
Show_Password_24.png 리소스 삭제 (미사용)
코드 개선 및 경고 수정
ListViewColumnSorter.cs, ShellBrowser.cs에서 도달할 수 없는 코드(goto 이후 break문) 제거
ShellBrowser.cs의 DeleteSelectedItems 메서드에 await 키워드 추가
Form_TotalCommander.cs에서 미사용 isRightVisible 필드 제거
기능 개선
FormHelper.cs를 활용한 대화상자 중앙 표시 기능 구현
파일 복사 시 "(1)" 접미사로 이름 충돌 해결 기능 추가
Function 키 문제 수정
ProcessCmdKey 메서드가 포커스된 탐색기 경로를 올바르게 전달하도록 수정
F5 키 처리 개선
Browser_GotFocus 메서드에 로깅 추가
기타 개선사항
설정 업데이트 시 표시되는 디버그 메시지 박스 제거
삭제된 파일
TotalCommander/LoadedIconsCache.cs
TotalCommander/NavigationBarBreadcrumb.cs
fix_imports.ps1

--- a/TotalCommander/TotalCommander.csproj
+++ b/TotalCommander/TotalCommander.csproj
@@ -72,6 +72,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComboBoxItem.cs" />
+    <Compile Include="CustomDialogHelper.cs" />
+    <Compile Include="CustomMessageBox.cs" />
+    <Compile Include="FormHelper.cs" />
     <Compile Include="GUI\DisksBrowser.cs" />
     <Compile Include="GUI\FileBrowser.cs" />
     <Compile Include="GUI\FormFindFiles.cs">
@@ -146,6 +149,7 @@
     <Compile Include="KeySettings.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="StringResources.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form_TotalCommander.resx">
