수정된 내용 정리
1. TotalCommander/GUI/ShellBrowser.cs 파일 수정
한국어 주석을 영어로 번역
하드코딩된 한국어 문자열을 StringResources.GetString() 메서드를 사용하도록 변경
압축 파일 관련 작업 제한 메시지들을 리소스 관리 시스템으로 변경
2. TotalCommander/StringResources.cs 파일 수정
새로운 문자열 리소스 추가:
압축 파일 관련 작업 제한 메시지 (ArchiveCopyRestriction, ArchiveDeleteRestriction 등)
파일 작업 관련 메시지 (LoadingArchiveContents, ArchiveItemCount 등)
폴더 및 파일 생성 관련 메시지 (EnterFolderName, CannotCreateFolder 등)
영어와 한국어 버전 모두 추가 (enResources, koResources)
3. docs/CODING_GUIDELINES.md 파일 생성
코드 주석 작성 가이드라인
문자열 처리 가이드라인
StringResources 사용 방법
코드 네이밍 규칙
파일 구조 가이드라인
예제 코드와 체크리스트
4. README.md 파일 업데이트
개발 가이드라인 섹션 추가
코딩 스타일과 다국어 지원에 관한 간략한 요약
자세한 가이드라인 문서로의 링크(docs/CODING_GUIDELINES.md) 추가

--- a/TotalCommander/TotalCommander.csproj
+++ b/TotalCommander/TotalCommander.csproj
@@ -72,11 +72,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComboBoxItem.cs" />
+    <Compile Include="Compression\SevenZipCompression.cs" />
     <Compile Include="CustomDialogHelper.cs" />
-    <Compile Include="CustomMessageBox.cs" />
+    <Compile Include="CustomMessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormHelper.cs" />
-    <Compile Include="GUI\DisksBrowser.cs" />
-    <Compile Include="GUI\FileBrowser.cs" />
+    <Compile Include="GUI\DisksBrowser.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="GUI\FileBrowser.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="GUI\FormFindFiles.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +102,12 @@
     <Compile Include="GUI\FormPacking.Designer.cs">
       <DependentUpon>FormPacking.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\FormSevenZip.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\FormSevenZip.Designer.cs">
+      <DependentUpon>FormSevenZip.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\FormNewFolder.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,9 +117,17 @@
     <Compile Include="GUI\FormCopyConfirm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\FormSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\FormStatusFontSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GUI\ListViewColumnSorter.cs" />
     <Compile Include="GUI\ListViewExtensions.cs" />
-    <Compile Include="GUI\NavigationPane.cs" />
+    <Compile Include="GUI\NavigationPane.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="GUI\ShellBrowser.cs" />
     <Compile Include="GUI\ShellBrowser.Designer.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -137,6 +158,9 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\FormUserExecuteOption.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\FormProgressExtract.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -170,6 +194,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\FormCopyConfirm.resx">
       <DependentUpon>FormCopyConfirm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\FormSevenZip.resx">
+      <DependentUpon>FormSevenZip.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ShellBrowser.resx">
       <DependentUpon>ShellBrowser.cs</DependentUpon>
@@ -216,6 +243,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="totalCommander.ico" />
+    <Content Include="7za.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
