설정창 수정

--- a/TotalCommander/App.config
+++ b/TotalCommander/App.config
@@ -1,6 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="TotalCommander.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
+    <userSettings>
+        <TotalCommander.Properties.Settings>
+            <setting name="WindowLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowWidth" serializeAs="String">
+                <value>1264</value>
+            </setting>
+            <setting name="WindowHeight" serializeAs="String">
+                <value>682</value>
+            </setting>
+            <setting name="WindowMaximized" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DefaultSortMode" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ShowHiddenFiles" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ShowSystemFiles" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="FullRowSelect" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ConfirmOverwrite" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="PreserveFileTime" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DefaultCompressionLevel" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="DefaultCompressionFormat" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SortMode" serializeAs="String">
+                <value>Name</value>
+            </setting>
+            <setting name="SortReverse" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DirsFirst" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ExplorerFont" serializeAs="String">
+                <value></value>
+            </setting>
+            <setting name="StatusFont" serializeAs="String">
+                <value></value>
+            </setting>
+            <setting name="FolderFont" serializeAs="String">
+                <value></value>
+            </setting>
+            <setting name="ViewerFont" serializeAs="String">
+                <value></value>
+            </setting>
+            <setting name="AddressBarFont" serializeAs="String">
+                <value></value>
+            </setting>
+            <setting name="WindowX" serializeAs="String">
+                <value>100</value>
+            </setting>
+            <setting name="WindowY" serializeAs="String">
+                <value>100</value>
+            </setting>
+        </TotalCommander.Properties.Settings>
+    </userSettings>
 </configuration>
